# evidence-ext

./: .copier-answers.yml  .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test-evidence.yml
evidence_ext/: __init__.py  config.py  extension.py  main.py
sample/: README.md  package-lock.json  package.json
sample/pages/: control-logic.md  index.md
