[tool.poetry]
name = "evidence-ext"
version = "0.0.0"
description = "`evidence-ext` is a Meltano utility extension."
authors = ["Ken Payne"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "evidence_ext" }
    # uncomment this if you want to include static assets
    # { include = "files_evidence-ext.*" }
]
# If you need to static assets with your extension, you can add them here.
# Under a directory path of "files_evidence-ext/"
#include = [
#    "files_evidence-ext/somefile.thing"
#]

[tool.poetry.dependencies]
python = "<3.12,>=3.7"
PyYAML = "^6.0.0"
click = "^8.1.3"
typer = "^0.6.1"
"meltano.edk"= {git = "https://github.com/meltano/edk.git", rev="main"}
nodejs-bin = {extras = ["cmd"], version = "^18.4.0a4"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.8", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
evidence_extension = 'evidence_ext.main:app'

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"