[tool.poetry]
name = "evidence-ext"
version = "0.0.0"
description = "`evidence-ext` is a Meltano utility extension."
authors = ["Meltano <hello@meltano.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "evidence_ext" }]

[tool.poetry.dependencies]
python = ">=3.8,<4"
PyYAML = "^6.0.0"
click = "^8.1.3"
typer = ">=0.6.1,<0.10.0"
"meltano.edk" = "^0.4.0"
nodejs-bin = { extras = ["cmd"], version = "^18.4.0a4" }

[build-system]
requires = ["poetry-core>=1.0.8", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
evidence_extension = 'evidence_ext.main:app'

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.ruff]
line-length = 88
src = ["src", "tests", "docs"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "ANN101", # missing-type-self
    "DJ",     # flake8-django
    "PD",     # pandas-vet
    "UP006",  # Use list/dict/etc. instead of t.List/t.Dist/etc. for type annotations (PEP 585)
]
select = ["ALL"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option"]

[tool.ruff.lint.isort]
known-first-party = ["evidence_ext"]

[tool.ruff.lint.pydocstyle]
convention = "google"
